--- a/lib/chrip_web/live/post_live/index.html.heex
+++ b/lib/chrip_web/live/post_live/index.html.heex
@@ -23,7 +23,7 @@
       <th></th>
     </tr>
   </thead>
-  <tbody id="posts">
+  <tbody id="posts" phx-update="prepend">
     <%= for post <- @posts do %>
       <tr id={"post-#{post.id}"}>
         <td><%= post.username %></td>
